* CHANGE: Convert Javascripts to Script#
* ADD: Comment all Facade methods and mention the "why" and "how"
* CHANGE: Update Velocity reference to latest release

Version 2.6.6
=============
ADD: /Setup/Default.aspx which validates web.config setup is done correctly.
ADD: Create a Web Platform Installer distribution to distribute dropthings through microsoft.com/web

Version 2.6.5
=============
FIX: Issue 118: Fixed role template issues where it was not correctly returning the registered user's template.
FIX: Issue 117:	Facade.Page thrown InvalidOperationException when chaning column layout on a tab without any widgets
FIX: Use the default title of newly added tab from resource keys so that it can be internationalized.
ADD: Some more watin tests


Version 2.6.2
=============
FIX: Issue-100: UserSetting.CurrentPageID now has foreign key to Page object
FIX: Issue 99:	Unique page titles create UI issues
FIX: Issue 98:	Lock widget instance > widget header is not fully disabled
FIX: Issue 97:	Add tab, add widget: error 'sequence contains no elements'
FIX: Issue 96:	Update widget: not all properties are updated
FIX: Issue 95:	Delete widget: Reference constraint errors when widget is used in roles, or added to portal
FIX: Issue 94:	Delete widget: cache is not emptied
FIX: Issue 90:	changing page layout - loss of widgets
FIX: Issue 88:	Maximized widget has 'Move' cursor in widgetheader
FIX: Issue 85:	Problem with the editing Widgets
CHANGE: Refactor Page settings panel to a user control.
CHANGE: Refactor tab bar to a user control.
CHANGE: Refactor default.aspx and move all page specific behavior to WidgetPage.ascx
CHANGE: Change all AspNetUsers, AspNetRoles to proper names like User, Role
CHANGE: Change Page to Tab to prevent conflict with Page

Version 2.6.1
==============
FIX: Fixed the logic where widgets on a column is pushed down when an widget is dropped on a column.